--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>js2</title>
 </head>
 <body>
+    <h1><a onclick="calculate(a, b, c)" href="#"> Розв'язати</a></h1>
+    <div id="Equation"></div>
+    <div id="x1"></div>
+    <div id="x2"></div>
     <script type="text/javascript" src="js22/index.js"></script>
 </body>
 </html>
